--- a/01_basic/package.json
+++ b/01_basic/package.json
@@ -8,12 +8,17 @@
     "dev": "next",
     "build": "next build",
     "start": "next start"
- },
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "next": "^12.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "^18.6.1",
+    "@types/react": "^18.0.15",
+    "typescript": "^4.7.4"
   }
 }
